issue #33: fixes to integration tests (work commit)